[package]
name = "sats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
bitcoin = { version = "0.30.0", features = ["rand"] }
bitcoincore-rpc = "0.17.0"
dotenv = "0.15.0"
redb = "1.2.0"
redis = { version = "0.23.3", features = ["tokio-comp", "json"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
tokio = { version = "1.21", features = ["full"] }
