[package]
name = "sats"
description = "Ordinal tracker"
version = "0.1.0"
license = "FSL-1.0-MIT"
edition = "2021"

[dependencies]
bitcoin = { version = "0.30.1", features = ["rand"] }
bitcoincore-rpc = "0.17.0"
clap = { version = "4.4.8", features = ["cargo"] }
rusqlite = { version = "0.30.0", features = ["bundled", "array"] }
